--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -423,10 +423,6 @@ body {
 #navCrop {
   width: 30px;
   height: 30px;
-  width: 300px;
-  height: 30px;
-  width: 300px;
-  height: calc(100% - 10px);
   overflow: clip;
   border-radius: 5px;
   position: fixed;
@@ -657,11 +653,11 @@ body {
 }
 
 #userConsole {
+  display: -ms-grid;
+  display: grid;
   top: 0;
   top: -100vh;
   width: calc(100vw - 10px);
-  display: -ms-grid;
-  display: grid;
   position: absolute;
   z-index: 4;
   height: calc(100vh - 63px);
@@ -825,39 +821,48 @@ body {
 }
 
 #adminConsole {
-  bottom: 50px;
   display: block;
+  bottom: 50px;
   position: absolute;
   overflow: hidden;
-  padding: 5px;
-  height: calc(100% - 70px);
-  width: calc(100% - 30px);
+  height: calc(100% - 60px);
+  width: calc(100% - 20px);
   border-radius: 5px;
-  -webkit-transition: bottom 2s, background 1s;
-  transition: bottom 2s, background 1s;
+  -webkit-transition: bottom 2s, background 1s, -webkit-box-shadow 1s;
+  transition: bottom 2s, background 1s, -webkit-box-shadow 1s;
+  transition: bottom 2s, background 1s, box-shadow 1s;
+  transition: bottom 2s, background 1s, box-shadow 1s, -webkit-box-shadow 1s;
   left: 10px;
+  font-size: 14px;
   z-index: 4;
   cursor: pointer;
-  -webkit-box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4), inset 0 0 0 5px #2b2512;
+          box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4), inset 0 0 0 5px #2b2512;
   background-color: #2b2512;
 }
 
 #adminConsole:hover {
   background-color: #473d1f;
+  -webkit-box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4), inset 0 0 0 5px #473d1f;
+          box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4), inset 0 0 0 5px #473d1f;
 }
 
 #adminConsole #adminConsoleDesk {
-  width: calc(100% - 300px);
-  width: calc(100% - 20px);
+  width: calc(100% - 290px);
+  width: calc(100% - 30px);
   display: block;
-  height: calc(100% - 10px);
-  margin: 5px;
+  height: calc(100% - 20px);
   position: absolute;
-  right: 0;
-  top: 0;
-  -webkit-transition: width 1s, background 1s;
-  transition: width 1s, background 1s;
+  right: 5px;
+  padding: 5px;
+  -webkit-box-shadow: inset 0 0 0 5px #b69d54;
+          box-shadow: inset 0 0 0 5px #b69d54;
+  overflow: hidden;
+  top: 5px;
+  -webkit-transition: width 1s, background 1s, -webkit-box-shadow 1s;
+  transition: width 1s, background 1s, -webkit-box-shadow 1s;
+  transition: width 1s, background 1s, box-shadow 1s;
+  transition: width 1s, background 1s, box-shadow 1s, -webkit-box-shadow 1s;
   background-color: #b69d54;
   border-radius: 4px;
   cursor: default;
@@ -865,12 +870,16 @@ body {
 
 #adminConsole #adminConsoleDesk:hover {
   background-color: #c2ad70;
+  -webkit-box-shadow: inset 0 0 0 5px #c2ad70;
+          box-shadow: inset 0 0 0 5px #c2ad70;
 }
 
 #adminConsole #adminConsoleMeta {
   display: block;
-  height: calc(100% - 10px);
-  width: 275px;
+  height: calc(100% - 20px);
+  width: calc(100% - 30px);
+  padding: 5px;
+  overflow: hidden;
   position: absolute;
   left: 15px;
   top: 5px;
@@ -880,6 +889,7 @@ body {
 }
 
 #helperDesk {
+  display: none;
   z-index: 5;
   overflow: hidden;
 }
