--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -276,12 +276,12 @@ body {
     height: 30px;
 
     // Nav Tool
-    width: 300px;
-    height: 30px;
+    // width: 300px;
+    // height: 30px;
 
     // Navigation Panel
-    width: 300px;
-    height: calc(100% - 10px);
+    // width: 300px;
+    // height: calc(100% - 10px);
 
 
     overflow: clip;
@@ -457,6 +457,9 @@ body {
 
 }
 #userConsole {
+
+    // display: none;
+    display: grid;
     
     // Open
     top: 0;
@@ -465,7 +468,6 @@ body {
     top: -100vh;
 
     width: calc(100vw - 10px);
-    display: grid;
     position: absolute;
     z-index: 4;
     height: calc(100vh - 63px);
@@ -591,49 +593,54 @@ body {
 
 // ADMIN --------------------------------------------------------------------------------------------------------------------------------
 #adminConsole {
+    display: block;
+    // display: none;
+
     bottom: 50px;
     // bottom: -100%;
 
-
-    display: block;
-    // display: none;
     position: absolute;
     overflow: hidden;
-    padding: 5px;
-    height: calc(100% - 70px); 
-    width: calc(100% - 30px);
+    height: calc(100% - 60px); 
+    width: calc(100% - 20px);
     border-radius: 5px;
-    transition: bottom 2s, background 1s;
+    transition: bottom 2s, background 1s, box-shadow 1s;
     left: 10px;
+    font-size: 14px;
     z-index: 4;
     cursor: pointer;
-    box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4), inset 0 0 0 5px $a1;
     background-color: $a1;
 
-    &:hover {background-color: $a2;}
+    &:hover {background-color: $a2; box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.4), inset 0 0 0 5px $a2;}
 
     #adminConsoleDesk {
-        width: calc(100% - 300px);
-        width: calc(100% - 20px);
+        width: calc(100% - 290px);
+        width: calc(100% - 30px);
 
         display: block;
-        height: calc(100% - 10px);
-        margin: 5px;
+        height: calc(100% - 20px);
         position: absolute;
-        right: 0;
-        top: 0;
-        transition: width 1s, background 1s;
+        right: 5px;
+        padding: 5px;
+        box-shadow: inset 0 0 0 5px $a6;
+        overflow: hidden;
+        top: 5px;
+        transition: width 1s, background 1s, box-shadow 1s;
         background-color: $a6;
         border-radius: 4px;
         cursor: default;
         &:hover {
             background-color: $a7;
+            box-shadow: inset 0 0 0 5px $a7;
         }
     }
     #adminConsoleMeta {
         display: block;
-        height: calc(100% - 10px);
-        width: 275px;
+        height: calc(100% - 20px);
+        width: calc(100% - 30px);
+        padding: 5px;
+        overflow: hidden;
         position: absolute;
         left: 15px;
         top: 5px;
@@ -643,7 +650,7 @@ body {
     }
 }
 #helperDesk {
-    // display: none;
+    display: none;
 
 
     z-index: 5;
